styles.css
* {
    --main_color : #d6d6d6;
    --secondary_color : #8ecae6;
    --tertiary_color : #023047;
    --main_font : 'Space Mono', monospace;
    margin : 0;
    padding : 0;
    color: var(--tertiary_color);
}
body {
    background-color: var(--main_color);
    font-family: var(--main_font);
    height: 100vh;
    display: flex;
    flex-direction: column;
    position: relative;
}

.modal {
    display: none;
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    justify-content: center;
    align-items: center;
    overflow: auto;
    background-color: rgb(0,0,0);
    background-color: rgba(0,0,0,0.4);
}

#close {
    color: var(--tertiary_color);
    float: right;
    font-size: 35px;
    font-weight: bold;
}

#close:hover,
#close:focus {
  text-decoration: none;
  cursor: pointer;
  color: black;
}

#form_container {
    background-color: var(--main_color);
    border-radius: 10px;
    padding: 20px;
    
}

#modal_title {
    margin-bottom: 20px;
}

form {
    display: flex;
    flex-direction: column;
    padding: 50px;
    gap: 15px;
    justify-content: center;
    align-items: center;
}

input {
    width: 20rem;
    font-size: 1.5rem;
    border-radius: 10px;
}

label {
    font-size: 1.2rem;
}

.modal-content {
    background-color: #fefefe;
    padding: 20px;
    width: 70%; /* Could be more or less, depending on screen size */
}

#submit_book {
    width: 20rem;
    height: 3rem;
    font-size: 1.5rem;
    align-self: center;
    background-color: var(--secondary_color);
    color: var(--tertiary_color);
    border-radius: 10px;
    margin-top: 20px;
    box-shadow: 1px 2px 5px;
}

#submit_book:hover {
    background-color: var(--tertiary_color);
    color: var(--main_color);
    box-shadow: 1px 2px 5px;
}

#header {
    background-color: var(--secondary_color);
    height: 10vh;
}

#library_text {
    padding: 30px;
    font-size: 2.5rem;
}

#main {
    flex: 1;
    display: flex;
    flex-direction: column;
    align-items: center;
}

#card_section {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
    flex: auto;
    width: 100%;
}

.book_card {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    border: solid var(--tertiary_color) 2px;
    background-color: var(--secondary_color);
    border-radius: 10px;
    margin: 30px;
    justify-content: center;
    padding: 30px;
    gap: 30px;
    max-height: 40 0px;
    box-shadow: 5px 5px 10px;

}

h2 {
    font-size: 1.5rem;
}

#add_book {
    font-size: 2rem;
    background-color: var(--secondary_color);
    border: solid var(--tertiary_color) 2px;
    box-shadow: 1px 2px 5px;
    border-radius: 10px;
    margin: 30px;
    padding: 10px;   
}

#add_book:hover {
    border: solid var(--main_color) 2px;
    background-color: var(--tertiary_color);
    color: var(--main_color);
    box-shadow: 1px 2px 5px;
}

.have_read {
    background-color: #06d6a0 !important;
}

.read_button {
    background-color: #e63946;
    font-size: 1.5rem;
    border-radius: 10px;
    box-shadow: 1px 2px 5px;
}

.remove_button {
    font-size: 1.5rem;
    border-radius: 10px;
    background-color: var(--main_color);
    box-shadow: 1px 2px 5px;
}

#footer {
    background-color: var(--secondary_color);
    height: 5vh;
}

#made_by {
    padding: 10px;
    text-align: center;
}

